--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </summary>
       <div class="game-details">
         <h2 class="heading">
-          <a href="https://boardgamegeek.com/boardgame/{{{ id }}}">
+          <a href="https://boardgamegeek.com/boardgame/{{{ id }}}" target="_blank">
             {{# helpers.highlight }}{ "attribute": "name" }{{/ helpers.highlight }}
           </a>
         </h2>
