--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <dt>Expansions</dt>
             <dd><ul>
               {{# expansions }}
-                <li><a href="https://boardgamegeek.com/boardgame/{{{ id }}}">{{ name }}</a></li>
+                <li><a href="https://boardgamegeek.com/boardgame/{{{ id }}}" target="_blank">{{ name }}</a></li>
               {{/ expansions }}
             </ul></dd>
           </div>
