BGG logo updates

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <img class="logo" src="favicon.ico" height="36" width="36">
     <div class="search-box" id="search-box"></div>
     <div class="stats" id="stats"></div>
-	<a class="ref" href="https://boardgamegeek.com"><img src="powered_by_bgg.png" width="90" height="30"></a>
+	<a class="ref" href="https://boardgamegeek.com"><img src="powered_by_bgg.png" width="150" height="45"></a>
+	<div class="content-left"></div>
     <a class="ref" href="https://www.algolia.com"><img src="search-by-algolia.png" width="130" height="18"></a>
   </header>
   <article class="wrapper">
